Fixed background gap at location of the footer

--- a/css/main.css
+++ b/css/main.css
@@ -3,11 +3,9 @@
         text-decoration: none;
     }
 
-    body, html { 
+    html { 
         height:100%; 
-        /* margin:0;      */
-        /* padding:0;  */
-        } 
+    } 
         
     *, body{
         box-sizing: border-box;
@@ -19,7 +17,7 @@
     body{
         background-image: linear-gradient(120deg, #a6c0fe 0%, #f68084 100%);
         background-repeat: no-repeat;
-    
+        background-size: cover;
         margin:0;     
         padding:0; 
         text-align: center;
